--- a/sources/frontend-gateway-svc/Dockerfile
+++ b/sources/frontend-gateway-svc/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi8/nodejs-14:1-28 AS builder
+FROM node:alpine AS builder
 
 USER root
 RUN mkdir /app
@@ -6,6 +6,12 @@ WORKDIR /app
 COPY server.js /app
 COPY package.json /app
 COPY .env /app
+# COPY ui-react /app
+
+# WORKDIR /app/ui-react/
+# RUN npm install
+# RUN npm run build
+
 WORKDIR /app/ui-react/build
 COPY ./ui-react/build .
 
@@ -19,8 +25,8 @@ USER 1001
 WORKDIR /app
 COPY --from=builder /app .
 
-ENV WEB_PORT 3001
-EXPOSE  3001
+ENV WEB_PORT 3004
+EXPOSE  3004
 
 # Define command to run the application when the container starts
 CMD ["node", "/app/server.js"]
